--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "server",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sai kumar",
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.24",
-    "nodemon": "^2.0.6"
+    "nodemon": "^2.0.7",
+    "wbm": "^1.1.13"
   }
 }
